force-app/main/default/objects/CS_Record__c/CS_Record__c.object-meta.xml
<CustomObject>
    <label>CS Record</label>
    <nameField>
        <displayFormat>CS-{00000}</displayFormat>
        <label>CS Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CS Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>