force-app/main/default/objects/CS_Record__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CS Records</relationshipLabel>
    <relationshipName>CS_Records</relationshipName>
    <type>Lookup</type>
</CustomField>