force-app/main/default/objects/CS_Record__c/fields/Account_Management_Sub_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Management_Sub_Status__c</fullName>
    <label>Account Management Sub-Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Technical Issues</fullName>
            </value>
            <value>
                <fullName>On Track</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>At Risk</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
            <value>
                <fullName>Steady State</fullName>
            </value>
            <value>
                <fullName>Transition to CSM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>