force-app/main/default/objects/CS_Record__c/fields/AE_to_CSM_handoff_notes__c.field-meta.xml
<CustomField>
    <fullName>AE_to_CSM_handoff_notes__c</fullName>
    <inlineHelpText>Key selling points:
Additional stakeholders:
Industry:
Business model:
Vehicle type:
Previous Solution:
Program Goals:
Training Needs:
Timeline:
Go-Live Date:
Installation:
Concerns:
Other:</inlineHelpText>
    <label>AE to CS handoff notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>