force-app/main/default/objects/CS_Record__c/fields/Business_Review_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Review_Type__c</fullName>
    <label>Business Review Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>annual</fullName>
            </value>
            <value>
                <fullName>Bi- Annual</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
            <value>
                <fullName>Renewal Tour</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>