force-app/main/default/objects/CS_Record__c/fields/Churn_Risk_Reason__c.field-meta.xml
<CustomField>
    <fullName>Churn_Risk_Reason__c</fullName>
    <label>Return Risk Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>