force-app/main/default/objects/CS_Record__c/fields/CS_POC_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>CS_POC_Email_Address__c</fullName>
    <label>CS POC Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>