force-app/main/default/objects/CS_Record__c/fields/CS_POC_First_Name__c.field-meta.xml
<CustomField>
    <fullName>CS_POC_First_Name__c</fullName>
    <inlineHelpText>Very important to be filled out correctly b/c this is where we get the name to send our automated emails</inlineHelpText>
    <label>CS POC First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>