force-app/main/default/objects/CS_Record__c/fields/CSM_Health_Rating__c.field-meta.xml
<CustomField>
    <fullName>CSM_Health_Rating__c</fullName>
    <description>1-5 score that reflects the CSM&apos;s opinion of how well onboarding is going</description>
    <label>CS Sentiment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>