force-app/main/default/objects/CS_Record__c/fields/Devices_Active_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Devices_Active_Percentage__c</fullName>
    <label>Devices Active Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>