force-app/main/default/objects/CS_Record__c/fields/Did_they_Trial__c.field-meta.xml
<CustomField>
    <fullName>Did_they_Trial__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check for YES - AE to inform the future CSM if the customer completed a trial before purchase</inlineHelpText>
    <label>Did they Trial?</label>
    <type>Checkbox</type>
</CustomField>