force-app/main/default/objects/CS_Record__c/fields/Dollar_Amount_at_Risk__c.field-meta.xml
<CustomField>
    <fullName>Dollar_Amount_at_Risk__c</fullName>
    <label>Dollar Amount at Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>25%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>75%</fullName>
            </value>
            <value>
                <fullName>100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>