force-app/main/default/objects/CS_Record__c/fields/Feature_commits_CSM__c.field-meta.xml
<CustomField>
    <fullName>Feature_commits_CSM__c</fullName>
    <label>CS Feature Commits</label>
    <type>TextArea</type>
</CustomField>