force-app/main/default/objects/CS_Record__c/fields/First_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Purchase_Date__c</fullName>
    <label>First Purchase Date</label>
    <type>Date</type>
</CustomField>