force-app/main/default/objects/CS_Record__c/fields/Go_to_Green_Plan__c.field-meta.xml
<CustomField>
    <fullName>Go_to_Green_Plan__c</fullName>
    <description>Customer Success field for Non-Standard Asks from Customers</description>
    <inlineHelpText>Go to Green Plan - 500 Character Limit</inlineHelpText>
    <label>Go to Green Plan</label>
    <length>40000</length>
    <type>Html</type>
</CustomField>