force-app/main/default/objects/CS_Record__c/fields/Implementation_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Consultant__c</fullName>
    <formula>Account__r.CSM__r.FirstName +&apos; &apos;+ Account__r.CSM__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implementation Consultant</label>
    <type>Text</type>
</CustomField>