force-app/main/default/objects/CS_Record__c/fields/Key_Stakeholder_for_CSM__c.field-meta.xml
<CustomField>
    <fullName>Key_Stakeholder_for_CSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is for AEs to connect the key contact that CSMs should contact to initiate the onboarding</description>
    <inlineHelpText>Link the key contact for CSMs to contact to initiate the onboarding</inlineHelpText>
    <label>Key Stakeholder for CS</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Totango_Records_For_CSM</relationshipName>
    <type>Lookup</type>
</CustomField>