force-app/main/default/objects/CS_Record__c/fields/Onboarding_Extension_Notes__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Extension_Notes__c</fullName>
    <label>Onboarding Extension Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>