force-app/main/default/objects/CS_Record__c/fields/Pain_Points_Objections_during_the_trial__c.field-meta.xml
<CustomField>
    <fullName>Pain_Points_Objections_during_the_trial__c</fullName>
    <label>Pain Points/Objections during the trial</label>
    <type>TextArea</type>
</CustomField>