force-app/main/default/objects/CS_Record__c/fields/Pre_Sale_IC__c.field-meta.xml
<CustomField>
    <fullName>Pre_Sale_IC__c</fullName>
    <label>Pre-Sale IC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>