force-app/main/default/objects/CS_Record__c/fields/Preparedness_Rating__c.field-meta.xml
<CustomField>
    <fullName>Preparedness_Rating__c</fullName>
    <inlineHelpText>1 is low and 5 is high - Rating for AEs to share with CSMs how prepared the customer is coming into onboarding.</inlineHelpText>
    <label>Preparedness Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>