force-app/main/default/objects/CS_Record__c/fields/Remove_Automation__c.field-meta.xml
<CustomField>
    <fullName>Remove_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remove Automation</label>
    <type>Checkbox</type>
</CustomField>