force-app/main/default/objects/CS_Record__c/fields/Self_install_or_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Self_install_or_Vendor__c</fullName>
    <inlineHelpText>A picklist for AEs to communicate to future CSM if the customer intends to install the hardware themselves or not.</inlineHelpText>
    <label>Self install or Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self Install</fullName>
                <default>true</default>
                <label>Self Install</label>
            </value>
            <value>
                <fullName>3rd Party Installer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>