force-app/main/default/objects/CS_Record__c/fields/Sentiment_Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_Root_Cause__c</fullName>
    <label>Churn Risk Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adoption</fullName>
                <isActive>false</isActive>
                <label>Adoption</label>
            </value>
            <value>
                <fullName>Business changes</fullName>
            </value>
            <value>
                <fullName>Commercial terms</fullName>
            </value>
            <value>
                <fullName>COVID-19</fullName>
                <isActive>false</isActive>
                <label>COVID-19</label>
            </value>
            <value>
                <fullName>CS Sentiment Root Cause</fullName>
                <isActive>false</isActive>
                <label>CS Sentiment Root Cause</label>
            </value>
            <value>
                <fullName>Customer service</fullName>
            </value>
            <value>
                <fullName>Ease of doing business</fullName>
            </value>
            <value>
                <fullName>Feature Release Management</fullName>
                <isActive>false</isActive>
                <label>Feature Release Management</label>
            </value>
            <value>
                <fullName>Finance Issues</fullName>
                <isActive>false</isActive>
                <label>Finance Issues</label>
            </value>
            <value>
                <fullName>Footage Request</fullName>
                <isActive>false</isActive>
                <label>Footage Request</label>
            </value>
            <value>
                <fullName>Implementation Project Management Issues</fullName>
                <isActive>false</isActive>
                <label>Implementation Project Management Issues</label>
            </value>
            <value>
                <fullName>Installation Issues</fullName>
                <isActive>false</isActive>
                <label>Installation Issues</label>
            </value>
            <value>
                <fullName>Integration / API Challenges</fullName>
                <isActive>false</isActive>
                <label>Integration / API Challenges</label>
            </value>
            <value>
                <fullName>Lack of Formal Training</fullName>
                <isActive>false</isActive>
                <label>Lack of Formal Training</label>
            </value>
            <value>
                <fullName>Net New Feature Requests</fullName>
                <isActive>false</isActive>
                <label>Net New Feature Requests</label>
            </value>
            <value>
                <fullName>Product Defects</fullName>
                <isActive>false</isActive>
                <label>Product Defects</label>
            </value>
            <value>
                <fullName>Product fit</fullName>
            </value>
            <value>
                <fullName>Product Technical Fit</fullName>
            </value>
            <value>
                <fullName>Product technical issues</fullName>
                <isActive>false</isActive>
                <label>Product technical issues</label>
            </value>
            <value>
                <fullName>Progress on Feature Commits</fullName>
                <isActive>false</isActive>
                <label>Progress on Feature Commits</label>
            </value>
            <value>
                <fullName>Renewal admin issue</fullName>
            </value>
            <value>
                <fullName>Sales Expectation Setting</fullName>
                <isActive>false</isActive>
                <label>Sales Expectation Setting</label>
            </value>
            <value>
                <fullName>Shipping Delays and RMA Issues</fullName>
                <isActive>false</isActive>
                <label>Shipping Delays and RMA Issues</label>
            </value>
            <value>
                <fullName>Technical Support Dissatisfaction</fullName>
                <isActive>false</isActive>
                <label>Technical Support Dissatisfaction</label>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>