force-app/main/default/objects/CS_Record__c/fields/SIC__c.field-meta.xml
<CustomField>
    <fullName>SIC__c</fullName>
    <label>Customer Success Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>