force-app/main/default/objects/CS_Record__c/fields/Sites_Customer_Success_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sites_Customer_Success_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sites Customer Success Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CS_Records</relationshipName>
    <type>Lookup</type>
</CustomField>