force-app/main/default/objects/CS_Record__c/fields/Sites_TSE__c.field-meta.xml
<CustomField>
    <fullName>Sites_TSE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sites TSE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CS_Records1</relationshipName>
    <type>Lookup</type>
</CustomField>