force-app/main/default/objects/CS_Record__c/fields/Upsell_Opportunity_Products__c.field-meta.xml
<CustomField>
    <fullName>Upsell_Opportunity_Products__c</fullName>
    <label>Upsell Opportunity Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VG34</fullName>
            </value>
            <value>
                <fullName>AG24</fullName>
            </value>
            <value>
                <fullName>AG45</fullName>
            </value>
            <value>
                <fullName>CM31</fullName>
            </value>
            <value>
                <fullName>CM32</fullName>
            </value>
            <value>
                <fullName>EM21</fullName>
            </value>
            <value>
                <fullName>EM22</fullName>
            </value>
            <value>
                <fullName>DM11</fullName>
            </value>
            <value>
                <fullName>CARGO</fullName>
            </value>
            <value>
                <fullName>VG54</fullName>
            </value>
            <value>
                <fullName>AG26</fullName>
            </value>
            <value>
                <fullName>AG46</fullName>
            </value>
            <value>
                <fullName>AG53</fullName>
            </value>
            <value>
                <fullName>CM33</fullName>
            </value>
            <value>
                <fullName>CM34</fullName>
            </value>
            <value>
                <fullName>EM31</fullName>
            </value>
            <value>
                <fullName>VG55</fullName>
            </value>
            <value>
                <fullName>AG51</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>