force-app/main/default/objects/CS_Record__c/fields/Upsell_Opportunity_Reason__c.field-meta.xml
<CustomField>
    <fullName>Upsell_Opportunity_Reason__c</fullName>
    <label>Upsell Opportunity Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>