force-app/main/default/objects/CS_Record__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Feature_commits_CSM__c</columns>
    <columns>Pain_Points_Objections_during_the_trial__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>