force-app/main/default/objects/CS_Record__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CSM_Health_Notes__c</columns>
    <columns>AE_to_CSM_handoff_notes__c</columns>
    <columns>CSM_Health_Rating__c</columns>
    <columns>CSM_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>